--- a/.github/workflows/gradle-build.yml
+++ b/.github/workflows/gradle-build.yml
@@ -35,11 +35,12 @@ jobs:
         with:
           java-version: '17'
           distribution: 'corretto'
-
-      - name: Build with Gradle
-        uses: gradle/wrapper-action@v6
-        with:
-          tasks: 'build'
+      - name: Setup Gradle
+        uses: gradle/gradle-build-action@v2
+      - name: Make gradlew executable
+        run: chmod +x ./gradlew
+      - name: Execute Gradle build
+        run: ./gradlew build
 
   nexus:
     name: "Nexus deploy"
@@ -51,8 +52,9 @@ jobs:
         with:
           java-version: '17'
           distribution: 'corretto'
-
-      - name: Build with Gradle
-        uses: gradle/wrapper-action@v6
-        with:
-          tasks: 'jar'
+      - name: Setup Gradle
+        uses: gradle/gradle-build-action@v2
+      - name: Make gradlew executable
+        run: chmod +x ./gradlew
+      - name: Execute Gradle build
+        run: ./gradlew jar
