--- a/.github/workflows/gradle-build.yml
+++ b/.github/workflows/gradle-build.yml
@@ -27,6 +27,7 @@ jobs:
 
   build:
     name: "Build"
+    needs: validation
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -39,11 +40,14 @@ jobs:
         uses: gradle/gradle-build-action@v2
       - name: Make gradlew executable
         run: chmod +x ./gradlew
-      - name: Execute Gradle build
-        run: ./gradlew build
+      - name: build
+        uses: gradle/gradle-build-action@v2
+        with:
+          arguments: build
 
-  nexus:
-    name: "Nexus deploy"
+  publish:
+    name: "Publish to Nexus"
+    needs: build
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -56,5 +60,12 @@ jobs:
         uses: gradle/gradle-build-action@v2
       - name: Make gradlew executable
         run: chmod +x ./gradlew
-      - name: Execute Gradle build
-        run: ./gradlew jar
+      - name: publish
+        env:
+          EDPN_NEXUS_USERNAME: ${{ secrets.NEXUS_USERNAME }}
+          EDPN_NEXUS_PASSWORD: ${{ secrets.NEXUS_PASSWORD }}
+          ORG_GRADLE_PROJECT_edpnNexusUsername: ${{ secrets.NEXUS_USERNAME }}
+          ORG_GRADLE_PROJECT_edpnNexusPassword: ${{ secrets.NEXUS_PASSWORD }}
+        uses: gradle/gradle-build-action@v2
+        with:
+          arguments: publish
