--- a/build.gradle
+++ b/build.gradle
@@ -3,12 +3,22 @@ plugins {
     id 'maven-publish'
     id 'org.javamodularity.moduleplugin' version '1.8.12'
     id "org.gradlex.extra-java-module-info" version "1.4"
-    id 'io.spring.dependency-management' version '1.1.0'
+    id 'io.spring.dependency-management' version '1.1.3'
 }
 
 group = 'io.edpn.backend'
 version = '0.0.3-SNAPSHOT'
 compileJava.options.encoding = 'UTF-8'
+
+java {
+    sourceCompatibility = JavaVersion.VERSION_21
+    targetCompatibility = JavaVersion.VERSION_21
+
+    toolchain {
+        languageVersion=JavaLanguageVersion.of(21)
+        vendor=JvmVendorSpec.AMAZON
+    }
+}
 
 repositories {
     mavenCentral()
@@ -22,10 +32,8 @@ repositories {
     }
 }
 
-
 dependencies {
 }
-
 
 test {
     systemProperty "file.encoding", "utf-8"
