--- a/.github/workflows/gradle-build.yml
+++ b/.github/workflows/gradle-build.yml
@@ -31,7 +31,7 @@ jobs:
         uses: actions/setup-java@v3
         with:
           java-version: '21'
-          distribution: 'corretto'
+          distribution: 'temurin'
       - name: Setup Gradle
         uses: gradle/gradle-build-action@v2
       - name: Make gradlew executable
@@ -51,7 +51,7 @@ jobs:
         uses: actions/setup-java@v3
         with:
           java-version: '21'
-          distribution: 'corretto'
+          distribution: 'temurin'
       - name: Setup Gradle
         uses: gradle/gradle-build-action@v2
       - name: Make gradlew executable
